# VibeCurator.ai

./: .gitignore  README.md  agent.py  agent_manager.py  app.py  discovery_pipeline.py  docker-compose.yml  env.example  ingest_spotify.py  main.py  prd.md  prompts.py  pyproject.toml  tools.py
qdrant_storage/: raft_state.json
